@@ -24,6 +24,7 @@
             Add height check for Graphics.createArrayBuffer(...vertical_byte:true) (fix #1421)
             Add sanity check for debug trace print statement (fix #1420)
             Fix handling of exceptions in switch statements (fix #1352)
+            Fix 'return when not in function' regression when returning inside a catch block (fix #1422)
 
      1v97 : nRF52: fix NRF.on('connect',...) issue
             STM32: Fix setDeviceClockCmd error for USB.setConsole()
